# yacoin

./: .gitignore  Makefile.am  README.md  TEST_SUMMARY.md  aclocal.m4  configure.ac  yacoin-qt-tdm32.pro
.github/workflows/: yacoinbuildmultiplatform.yml
.githubworkflows/: yacoinbuildmultiplatform.yml
contrib/docker/: Dockerfile.build.ubuntu.16.04  Dockerfile.build.ubuntu.18.04  Dockerfile.yacoin  README.md  build-linux.sh
contrib/docker/windows/: Dockerfile.build.windows  buildyacoin.sh
doc/: build-unix.md
src/: Makefile.am  Makefile.qt.include  allocators.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-cli.h  bitcoinrpc.cpp  bitcoinrpc.h  blockencodings.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  db.cpp  db.h  dbwrapper.cpp  dbwrapper.h  ecwrapper.h  init.cpp  init.h  irc.cpp  kernel.cpp  kernel.h  kernelrecord.cpp  key.cpp  key.h  keystore.cpp  (+53 more)
src/consensus/: consensus.cpp  consensus.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/leveldb/: Makefile
src/leveldb/db/: version_edit.h  version_set.h
src/policy/: policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  explorer.cpp  explorer.h  guiutil.cpp  intro.cpp  mintingtablemodel.cpp  multisigaddressentry.cpp  multisigdialog.cpp  multisiginputentry.cpp  notificator.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  qvalidatedlineedit.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsentry.cpp  sendcoinsentry.h  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  transactiontablemodel.cpp  transactionview.cpp  transactionview.h  utilitydialog.cpp  walletframe.cpp  walletframe.h  walletmodel.cpp  walletmodel.h  walletmodeltransaction.cpp  (+2 more)
src/qt/locale/: bitcoin_af.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_et.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ja_JP.ts  bitcoin_ka.ts  bitcoin_ko_KR.ts  bitcoin_lv_LV.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro.ts  (+13 more)
src/rpc/: bitcoinrpc.cpp  bitcoinrpc.h  blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  rawtransaction.cpp  server.cpp  tokens.cpp
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.h  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/scrypt-jane/: scrypt-jane.c
src/test/: Makefile.standalone  blockchain_validation_tests.cpp  crypto_utils_tests.cpp  data_structures_tests.cpp  hash_tests.cpp  multisig_tests.cpp  network_utils_tests.cpp  script_tests.cpp  script_validation_tests.cpp  standalone_test_runner.cpp  string_utils_tests.cpp  system_utilities_tests.cpp  test_common.h  transaction_tests.cpp  yacoin_new_tests
src/tokens/: tokendb.cpp  tokendb.h  tokens.cpp
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
test/functional/: feature_basic_transfer.py  feature_describe_redeemscript.py  feature_epoch.py  feature_epoch_transfer.py  feature_hardfork_1_0.py  feature_op_cltv.py  feature_op_csv.py  feature_tx_malleability.py  mining_basic.py  test_runner.py
test/functional/test_framework/: util.py
